--- a/My Shop/index.html
+++ b/My Shop/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My shop</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>My Shopping Mall</h1>
+    <table id="customers">
+        <thead>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Rating</th>
+            <th>Image</th>
+        </thead>
+        <tbody id="tbody"></tbody>
+    </table>
     
 </body>
+<script src="./app.js"></script>
 </html>
