--- a/My Shop/index.html
+++ b/My Shop/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <h1>My Shopping Mall</h1>
+    <div class="card" id="card">
+        
+    </div>
     <table id="customers">
         <thead>
             <th>Id</th>
             <th>Name</th>
             <th>Price</th>
-            <th>Rating</th>
+            <th>Category</th>
             <th>Image</th>
         </thead>
         <tbody id="tbody"></tbody>
