--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,56 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio Website</title>
+  <link rel="stylesheet" href="./style.css">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Navbar start -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <nav class="navbar navbar-expand-lg bg-light shadow-sm sticky-top">
-                    <div class="container-fluid">
-                      <a class="navbar-brand text-primary" href="#">My Portfolio</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                          <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                          <a class="nav-link" href="#skills">My skills</a>
-                          <a class="nav-link" href="#projects">Projects</a>
-                          <a class="nav-link" href="#review">Review</a>
-                          <a class="nav-link" href="#contact">Contact</a>
-
-                        </div>
-                      </div>
-                    </div>
-                  </nav>
-            </div>
-        </div>
+  <!-- nav start  -->
+  <nav class="navbar navbar-expand-lg bg-light shadow-sm sticky-top">
+    <div class="container">
+      <a class="navbar-brand text-primary fw-bold" href="#">My Portfolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">My Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <!-- Navbar End -->
-    <!-- Home Start  -->
-    <div class="container-fluid vh-100">
-        <div class="row">
-            <div class="col-md-6 col-lg-6 bg-black">
-
-            </div>
-            <div class="col-md-6 col-lg-6">
-                
-            </div>
+  </nav>
+  <!-- nav end  -->
+  <!-- home start  -->
+  <section id="home"> 
+    <div class="container px-5">
+      <div class="row align-items-md-center">
+        <div class="col-md-6 p-lg-5">
+          <div class=" ms-md-5">
+            <img src="./img/resume.jpg" width="350px" height="350px" class="rounded-circle"alt="">
+          </div>
         </div>
-
+        <div class="col-md-6 order-md-first mt-5">
+          <div class="content p-md-5 ">
+            <h1 class=" fw-bold text-uppercase">Hi there!</h1>
+            <h1 class=" fw-bolder text-uppercase" style="margin-bottom: 0px;">I'm <span class="text-primary">pai zay oo</span></h1>
+            <span class="bg-primary text-white p-2 rounded" >passioante web developer</span>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Home End  -->
-    
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </section>
+  <!-- home end  -->
 </body>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </html>
